@@ -7,5 +7,9 @@
 <MODE>
 	<RULES>
 		<TERMINATE AT_CHAR="0" />
+		    <!--SEQ_REGEXP TYPE="OPERATOR"
+HASH_CHAR=":">(?=:)</SEQ_REGEXP>
+    <MARK_FOLLOWING TYPE="FUNCTION"
+EXCLUDE_MATCH="TRUE">:</MARK_FOLLOWING-->
 	</RULES>
 </MODE>
